--- a/client/src/Components/lisitem/ListItem.scss
+++ b/client/src/Components/lisitem/ListItem.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   cursor: pointer;
   color: white;
+  border-radius: 5px;
 
   img {
     width: 100%;
@@ -30,6 +31,8 @@
     -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     border-radius: 5px;
+    animation: divash;
+    animation-duration: 0.4s;
 
     img {
       height: 140px;
@@ -78,5 +81,16 @@
         color: lightgray;
       }
     }
+  }
+}
+@keyframes divash {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
   }
 }
